[gd_scene load_steps=4 format=3 uid="uid://cncrirmti6srb"]

[ext_resource type="Script" path="res://scripts/customer.gd" id="1_hgdmj"]
[ext_resource type="Texture2D" uid="uid://bijfj1l1sxid7" path="res://sprites/customer.png" id="2_su0hx"]
[ext_resource type="PackedScene" uid="uid://brwkubsfyeprn" path="res://assets/dialogue_bubble.tscn" id="3_ydi1j"]

[node name="Customer" type="Node2D"]
position = Vector2(0, 172)
script = ExtResource("1_hgdmj")

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_su0hx")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 6.0
offset_top = 140.0
offset_right = 573.0
offset_bottom = 271.0
text = "abc"

[node name="DialogueBubble" parent="." instance=ExtResource("3_ydi1j")]
visible = false
position = Vector2(160, -172)

[node name="DialogueTimer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
